--- a/public/history.html
+++ b/public/history.html
@@ -60,7 +60,7 @@
           <button class="time-filter-btn" data-hours="1">Last 1 Hour</button>
           <button class="time-filter-btn" data-hours="4">Last 4 Hours</button>
           <button class="time-filter-btn active" data-hours="24">Last 24 Hours</button>
-          <button class="time-filter-btn" data-hours="all">All Time</button>
+          <button class="time-filter-btn" data-hours="all">Last 7 Days</button>
         </div>
         <div class="chart-wrapper">
           <canvas id="historyChart"></canvas>
